@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 56*3;
+use Test::More tests => 57*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -35,6 +35,7 @@ my @tagsets =
     'he::conll',
     'hi::conll',
     'hr::multext',
+    'hsb::sorokin',
     'hu::conll',
     'it::conll',
     'ja::conll', 'ja::ipadic',
