@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+Drivers:
+* HSB::Sorokin
+
 Fixes:
 * MUL::Google: now includes the tags AUX and PNOUN that were used in Universal
   Dependency Treebanks v2.0.
